syntax = "proto3";

option csharp_namespace = "GameDevsConnect.Backend.API.Profile.Services";

import "google/protobuf/empty.proto";

package profile;

service ProfileProtoService
{
	rpc Get(IdRequest) returns (GetResponse);
	rpc GetFull(IdRequest) returns (GetFullResponse);
	rpc Add(IdRequest) returns (Response);
	rpc Update(Profile) returns (Response);
	rpc Delete(IdRequest) returns (Response);
}

message Profile
{
	string id = 1;
	string userId = 2;
	string discordUrl = 3;
	string xUrl = 4;
	string websiteUrl = 5;
	string email = 6;
	bool showDiscord = 7;
	bool showX = 8;
	bool showWebsite = 9;
	bool showEmail = 10;
}

message User
{
	string id = 1;
	string loginId = 2;
	string username = 3;
	string avatar = 4;
	string accountType = 5;
}

// Requests
message IdRequest
{
	string id = 1;
}

// Responses
message Response
{
	string message = 1;
	bool status = 2;
	repeated string errors = 3;
}

message GetResponse
{
	Response response = 1;
	Profile profile = 2;
}

message GetFullResponse
{
	Response response = 1;
	Profile profile = 2;
	User user = 3;
	int32 followerCount = 4;
	int32 followingCount = 5;
}