syntax = "proto3";

option csharp_namespace = "GameDevsConnect.Backend.API.Project.Services";

import "google/protobuf/empty.proto";

package project;

service ProjectProtoService
{
	rpc GetProjectIds(google.protobuf.Empty) returns (GetIdsResponse);
	rpc GetProject(IdRequest) returns (GetProjectResponse);
	rpc AddProject(UpsertProjectRequest) returns (Response);
	rpc UpdateProject(UpsertProjectRequest) returns (Response);
	rpc DeleteProject(IdRequest) returns (Response);
}

message Project
{
	string id = 1;
	string title = 2;
	string description = 3;
	string ownerId = 4;
}

// Requests
message IdRequest
{
	string id = 1;
}

message UpsertProjectRequest
{
	Project project = 1;
}

// Responses

message Response
{
	string message = 1;
	bool status = 2;
	repeated string errors = 3;
}

message GetIdsResponse
{
	Response response = 1;
	repeated string ids = 2;
}

message GetProjectResponse 
{
	Response response = 1;
	Project project = 2;
}